major updates, added and fixes
hard to explain what i added here, just a lot